# SecureExamPortal

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  App.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SCREENSHOT.md  SECURITY.md  create_sample_data.py  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml  docker-publish.yml
app/: __init__.py  config.py  models.py
app/admin/: __init__.py  dashboard.py  decorators.py  exams.py  questions.py  reports.py  routes.py  routes_dashboard.py  routes_exams.py  routes_live_dashboard.py  routes_questions.py  routes_reports.py  routes_users.py  users.py
app/auth/: routes.py
app/static/css/: output.css  style.css
app/student/: __init__.py  routes.py
app/templates/: base.html  dashboard.html  exam.html  index.html  login.html  register.html  submit.html
app/templates/admin/: assign_exam.html  create_exam.html  dashboard.html  edit_user.html  exams.html  manage_questions.html  reports.html  users.html
app/templates/student/: dashboard.html  take_exam.html  view_result.html
app/utils/: email.py  exam_randomizer.py
backend/: .dockerignore  alembic.ini  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: cli.py  main.py  worker.py
backend/app/config/: base.py  development.py  production.py  testing.py
backend/app/extensions/: db.py  mail.py
backend/app/models/: __init__.py  audit.py  exam.py  job.py  user.py
backend/app/modules/admin/: __init__.py  routes.py
backend/app/modules/auth/: __init__.py  dependencies.py  routes.py
backend/app/modules/core/: __init__.py  routes.py
backend/app/modules/exams/: __init__.py  routes.py
backend/app/modules/student/: __init__.py  routes.py
backend/app/repositories/: __init__.py  exam_repository.py  user_repository.py
backend/app/schemas/: __init__.py  analytics.py  core.py  exam.py  user.py
backend/app/services/: audit.py  job_queue.py
backend/app/utils/: security.py
backend/docker/: Dockerfile  docker-compose.yml
backend/migrations/: env.py
backend/migrations/versions/: 45984fddfba7_baseline_schema.py
backend/tests/: conftest.py  test_admin_api.py  test_auth_api.py  test_migrations.py  test_security.py
docker/: nginx.conf  nginx.tls.conf  single-image-nginx.conf  start-single-image.sh
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  Root.jsx  dashboardModel.js  dashboardModel.test.js  index.css  index.jsx
frontend/src/components/: AuthView.jsx  Topbar.jsx  icons.jsx  ui.jsx
frontend/src/components/admin/: AdminAnalytics.jsx  AdminDashboard.jsx  AdminOverview.jsx  AdminReports.jsx  AdminShell.jsx  (+3 more)
frontend/src/hooks/: useAdminPortal.js  useExamGuard.js  useStudentPortal.js
frontend/src/lib/: api.js  constants.js
instance/: exam_portal.db
templates/: base.html
tests/: conftest.py  test_basic.py
(+2 files in other folders)
